--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,30 @@
 body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+    margin:0;
+    font-size:13px;
+    font-family:"Open Sans", sans-serif;
+}
+
+.content {
+    padding:2.3em;
 }
 
 a {
-  color: #00B7FF;
+    color: #00B7FF;
+}
+
+
+
+header {
+    color:#EEE;
+    background: #3579A3;    
+}
+
+.header-item {
+    display:inline-block;
+    padding-left:1em;
+    padding-right:1em;
+}
+
+header a {
+    color:#FAFAFA;
 }
