transaction fixes, block page data

--- a/views/transaction.pug
+++ b/views/transaction.pug
@@ -1,20 +1,20 @@
 extends layout
 
 block content
-	h1 Transaction
-	p you are viewing transaction #{transaction.hash}
+    include etherFormatting
+    h1 Transaction
+    p you are viewing transaction #{transaction.hash}
 	
-	div Hash: #{transaction.hash}
-	div Status: #{transaction.status}
-	div Block: #{transaction.block}
-	div Time stamp: #{transaction.timestamp}
-	div From: 
-		a(href=`/address/${transaction.fromAddress}`)
-			= transaction.fromAddress
-	div To: 
-		a(href=`/address/${transaction.toAddress}`)
-			= transaction.toAddress
-	div Amount: #{transaction.amount}
+    div Hash: #{transaction.hash}
+    div Status: #{transaction.status}
+    div Block: #{transaction.block}
+    div Time stamp: #{transaction.utctime}
+    div From: 
+        a(href=`/address/${transaction.fromAddress}`)
+            = transaction.fromAddress
+    div To: 
+        a(href=`/address/${transaction.toAddress}`)
+            = transaction.toAddress
+    div Amount: #{weiToEther(transaction.amount)} ETH
+    div Fee: #{transaction.fee}
 
-
-	
