Show whether an address is a contract address

--- a/views/blockTransactions.pug
+++ b/views/blockTransactions.pug
@@ -27,7 +27,7 @@ block content
                     span  -> 
                 if !transaction.to
                     td
-                        a(href=`/address/${transaction.to}`) Contract creation
+                        Contract creation
                 else
                     td
                         a(href=`/address/${transaction.to}`)
