--- a/views/address.pug
+++ b/views/address.pug
@@ -4,6 +4,8 @@ block content
     include etherFormatting
     h1 Address
     p you are viewing address #{address.address}
+        if address.isContract
+            span  (contract address)
     p eth balance: #{weiToEther(address.ethBalance)} ($#{weiToEther(address.ethBalance) * address.ethUsdPrice} USD equivalent, 1 ETH = $#{address.ethUsdPrice})
 
     br
