--- a/views/token.pug
+++ b/views/token.pug
@@ -1,5 +1,8 @@
 extends layout
 
 block content
-    h1 Token
-    p you are viewing Token #{token}
+    h1 Tokens
+    p you are looking at details for token #{token.symbol}
+    p #{token.name}
+    p #{token.symbol}
+    p $#{token.priceusd} (last updated on #{token.dateupdated})
