--- a/views/header.pug
+++ b/views/header.pug
@@ -1,14 +1,14 @@
 header
-  div(class="header-item")
-      a(href="/") etherslam
+  div(class="header-item header-site-name")
+      a(href="/") Etherslam
   div(class="header-item")
       form(action="/search")
           input(name="s" placeholder="search")
   div(class="header-item")
     a(href="/address/0x8F7147Aaa34d9ae583A7Aa803e8df9bd6B4CC185") test address
-    span /
+    span &nbsp;/&nbsp;
     a(href="/transaction/0xa1be7077e9fd420f3b6810842463d915f96bd2d13b437403c4f60739f4f7b9d3") test transaction
-    span /
+    span &nbsp;/&nbsp;
     a(href="/block/4000000") test block
-    span /
+    span &nbsp;/&nbsp;
     a(href="/token/EOS") test token
