Add index controller, basic info to index

--- a/views/address.pug
+++ b/views/address.pug
@@ -41,7 +41,7 @@ block content
                         a(href=`/address/${transaction.fromaddress}`)
                             = transaction.fromaddress.substring(0, 12) + '...'
                     td
-                        span  -> 
+                        span → 
                     td
                         a(href=`/address/${transaction.toaddress}`)
                             = transaction.toaddress.substring(0, 12) + '...'
