--- a/views/block.pug
+++ b/views/block.pug
@@ -9,7 +9,7 @@ block content
         table
             tr
                 td Time (UTC)
-                td #{block.localTime.toUTCString()}
+                td #{block.localTime.toUTCString()} (#{block.timeAgo})
             tr 
                 td Hash
                 td #{block.hash}
