--- a/views/blockTransactions.pug
+++ b/views/blockTransactions.pug
@@ -27,7 +27,7 @@ block content
                         a(href=`/address/${transaction.from}`)
                             = transaction.from.substring(0, 12) + '...'
                     td
-                        span  -> 
+                        span  → 
                     if !transaction.to
                         td
                             Contract creation
